[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ruvic-drive-connector"
version = "1.0.0"
description = "Conector Ruvic para Google Drive (Google Workspace) vía cuenta de servicio con delegación de dominio"
requires-python = ">=3.10"
dependencies = [
    "google-auth>=2.29,<3.0",
    "google-api-python-client>=2.130,<3.0",
]

[tool.setuptools.packages.find]
include = ["ruvic_drive_connector*"]
